k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
      - name: hello-world
        image: image-registry.openshift-image-registry.svc:5000/$(NAMESPACE)/hello-world-app:latest
        ports:
        - containerPort: 8080
