k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: hello-world-app
