k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  to:
    kind: Service
    name: hello-world-app
  port:
    targetPort: http
